# immersight-tools

./: .gitmodules  CMakeLists.txt  ImmersightTools-config.cmake  ImmersightToolsConfig.cmake  README.md
include/: defines.hpp  opencv.hpp  sutherlandHodgman.h  tools.hpp  util.h
src/: opencv.cpp  tools.cpp  util.cpp
